--- a/src/pages/test-iframe.astro
+++ b/src/pages/test-iframe.astro
@@ -20,7 +20,7 @@ import Layout from "../layouts/Layout.astro";
     <div class="border-2 border-gray-200 rounded-lg overflow-hidden shadow-lg">
       <iframe 
         name="species-frame" 
-        src="/species/Adelie" 
+        src="/speciesi-frame/Adelieiframe" 
         class="w-full"
         style="height: 600px; border: none;"
         id="species-iframe"
